--- a/clazz/Storyboard.storyboard
+++ b/clazz/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="EwJ-Ub-GOI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="v1w-eJ-zwl">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -47,7 +47,7 @@
                             <outlet property="delegate" destination="PVo-s0-p1n" id="SeK-CM-s0j"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Task" id="lN7-cW-Bi2"/>
+                    <tabBarItem key="tabBarItem" title="Task" image="task.png" id="lN7-cW-Bi2"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JNM-Wl-rS0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -76,7 +76,7 @@
                             <outlet property="delegate" destination="0RH-QD-zrX" id="cXc-NX-ecN"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Discipline" id="2ul-z6-lAq"/>
+                    <tabBarItem key="tabBarItem" title="Discipline" image="disc.png" id="2ul-z6-lAq"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2RQ-kq-5n0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -105,7 +105,7 @@
                             <outlet property="delegate" destination="Osg-I1-1LO" id="Phz-fI-weU"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Tests" id="DAV-9Q-ilM"/>
+                    <tabBarItem key="tabBarItem" title="Tests" image="test.png" id="DAV-9Q-ilM"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g4K-mO-OAW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -129,35 +129,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="N8i-0D-gio">
-                                <rect key="frame" x="0.0" y="70" width="320" height="68"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PgZ-Zl-1KR">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PgZ-Zl-1KR" id="Lxu-nl-MUn">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Disciplina" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-g1-4oU">
-                                                    <rect key="frame" x="0.0" y="11" width="150" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Prova" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8Y-Ka-uGr">
-                                                    <rect key="frame" x="170" y="11" width="150" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uiA-vt-CVX">
                                 <rect key="frame" x="0.0" y="146" width="320" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -182,17 +153,22 @@
                                 <rect key="frame" x="56" y="401" width="40" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dataf" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woz-F9-jHk">
                                 <rect key="frame" x="242" y="401" width="41" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="BvX-D9-WnP">
                                 <rect key="frame" x="18" y="456" width="284" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="percentageSelected:" destination="v1w-eJ-zwl" eventType="valueChanged" id="66M-cd-p3S"/>
+                                </connections>
                             </slider>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tarefa       % concluída" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSi-F2-5mR">
                                 <rect key="frame" x="79" y="504" width="176" height="21"/>
@@ -200,8 +176,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uf5-cA-8Ue">
-                                <rect key="frame" x="134" y="504" width="20" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uf5-cA-8Ue">
+                                <rect key="frame" x="127" y="504" width="31" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Disciplina" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-g1-4oU">
+                                <rect key="frame" x="0.0" y="85" width="150" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Prova" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8Y-Ka-uGr">
+                                <rect key="frame" x="170" y="85" width="150" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
@@ -210,12 +199,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="concludedSlider" destination="BvX-D9-WnP" id="lFA-Os-M1D"/>
-                        <outlet property="finalDate" destination="woz-F9-jHk" id="Do6-JU-ocP"/>
-                        <outlet property="initialDate" destination="QfU-6e-FZ1" id="4ZJ-fE-gCy"/>
                         <outlet property="percentageConcluded" destination="Uf5-cA-8Ue" id="mVI-ZT-Rfl"/>
+                        <outlet property="percentageSlider" destination="BvX-D9-WnP" id="x6X-vg-IFb"/>
                         <outlet property="taskDescription" destination="uiA-vt-CVX" id="UKh-Yv-Yr0"/>
                         <outlet property="taskDiscipline" destination="6Ti-g1-4oU" id="1Dg-Ry-t31"/>
+                        <outlet property="taskFinalDate" destination="woz-F9-jHk" id="N4y-ia-LBs"/>
+                        <outlet property="taskInitialDate" destination="QfU-6e-FZ1" id="3XZ-sf-cj9"/>
                         <outlet property="taskName" destination="jk7-9N-DXd" id="65M-eJ-gmv"/>
                         <outlet property="taskTest" destination="h8Y-Ka-uGr" id="Rsp-Oo-UyS"/>
                     </connections>
@@ -266,8 +255,8 @@
                     <connections>
                         <outlet property="disciplineDescription" destination="qKq-5e-VOC" id="yxP-bI-ZlK"/>
                         <outlet property="disciplineName" destination="D5g-kq-WCb" id="tDp-PB-kY8"/>
-                        <outlet property="disciplineScoreList" destination="XAK-4L-OzH" id="YKu-HE-NJM"/>
                         <outlet property="disciplineTaskList" destination="4oh-wQ-3ej" id="2z0-sp-NyW"/>
+                        <outlet property="disciplineTestList" destination="XAK-4L-OzH" id="OFI-Ol-2n7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="whW-9A-S4c" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -275,6 +264,11 @@
             <point key="canvasLocation" x="1104" y="-866"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="disc.png" width="30" height="26"/>
+        <image name="task.png" width="30" height="30"/>
+        <image name="test.png" width="30" height="28"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
